--- a/20200921_wanda_dazhong/pug/index.pug
+++ b/20200921_wanda_dazhong/pug/index.pug
@@ -1,5 +1,5 @@
 include ../../.public/pug/mixin
-+head(title="参与一汽大众万千宠爱只为你活动", mobile=true, rem=750, import=true)
++head(title="参与一汽-大众万千宠爱只为你活动", mobile=true, rem=750, import=true)
     script(src="//minisite.hocodo.com/common/layer/layer.js")
     script(src="https://res.wx.qq.com/open/js/jweixin-1.2.0.js")
     script(src="res/scripts/bundle.js?v=")
